# easycrypt

./: #foo.ec#  .dir-locals.el  .envrc  .gitignore  .gitmodules  .merlin  .ocamlformat  .ocamlformat-enable  .travis.yml  AUTHORS  COPYRIGHT  COPYRIGHT.yaml  FO.ec  INSTALL.md  KEM_CCA.ec  LICENSE  MANIFEST  MCP.md  Makefile  Makefile.in  Makefile.system  OW_PCVA.ec  README  README.md  TODO.txt  Vagrantfile  _tags  apply_example.ec  bug.ec  configure  configure.ac  cost.ec  default.nix  dune  dune-project  easycrypt  easycrypt.opam  easycrypt.opam.template  easycrypt.project  ec.init  (+13 more)
libs/lospecs/: .ocamlformat  HLAig.ml  aig.ml  aig.mli  ast.ml  ast.mli  avx2.ml  avx2.mli  avx2_runtime.c  avx2_runtime.cpp  avx2_runtime.h  avx512_runtime.cpp  bitdep.ml  bitdep_test.ml  circuit.ml  circuit.mli  circuit_avx2.ml  circuit_avx2.mli  circuit_spec.ml  circuit_spec.mli  circuit_test.ml  deps.ml  deps.mli  docs.tex  dune  eval_test.ml  eval_test.spec  evaluator.ml  evaluator_test.ml  fraig.ml  hlaig.ml  io.ml  io.mli  lexer.mll  lospecs_test.ml  parser.mly  ptree.ml  ptree.mli  smt.ml  smt.mli  (+6 more)
src/: .pydevproject  EasyPQCSimple.md  EcCoreModules.ml  EcCoreModules.mli  FieldTests.ml  TODO  Untitled-1  api.ml  apiTypes.mli  apiUtil.ml  ast.ml  ast.mli  astLogic.mli  astYacc.mli  debug.cmd  dune  easycrypt_base.ec  ec.ml  ec.ml.orig  ecAlgTactic.ml  ecAlgTactic.mli  ecAlgebra.ml  ecAlgebra.mli  ecAlphaInvHashtbl.ml  ecAlphaInvHashtbl.mli  ecAst.ml  ecAst.mli  ecAstlogic.mli  ecBDep.ml  ecBDep.mli  ecBV.ml  ecBaseLogic.ml  ecBaseLogic.mli  ecBigInt.ml  ecBigInt.mli  ecBigIntCore.ml  ecBullets.ml  ecBullets.mli  ecCHoare.ml  ecCallbyValue.ml  (+250 more)
src/attic/: ce.ml
src/config/: myocamlbuild.ml
src/ec/: forms.py  models.py  urls.py  views.py
src/extraction/: ecExtraction.ml
src/newengine/: ecHiGoal.ml  ecHiGoal.mli  ecLowGoal.ml  ecLowGoal.mli  ecProofTerm.ml  ecProofTerm.mli
src/parser/: dune  ecParser.mly  ecParserCloning.mly  ecParserExpressions.mly  ecParserFormulas.mly  ecParserIdents.mly  ecParserPrelude.mly  ecParserTactics.mly  ecParserTokens.mly
src/phl/: OldEcPhlConseq.ml  OldEcPhlFun.mli  README.md  REFACTORING.md  ecAuto.ml  ecCoreHoareBdHoare.ml  ecCoreHoareBdHoare.mli  ecEager.ml  ecEager.mli  ecPhl.mli  ecPhlAequiv.ml  ecPhlAequiv.mli  ecPhlApp.ml  ecPhlApp.mli  ecPhlAuto.ml  ecPhlAuto.mli  ecPhlBDep.ml  ecPhlBDep.mli  ecPhlBdHoare.ml  ecPhlBdHoare.mli  ecPhlCHoare.ml  ecPhlCHoare.mli  ecPhlCall.ml  ecPhlCall.mli  ecPhlCase.ml  ecPhlCase.mli  ecPhlCodeTx.ml  ecPhlCodeTx.mli  ecPhlCond.ml  ecPhlCond.mli  ecPhlConseq.ml  ecPhlConseq.mli  ecPhlCoreView.ml  ecPhlCoreView.mli  ecPhlDCCore.ml  ecPhlDCCore.mli  ecPhlDCDelay.ml  ecPhlDCDelay.mli  ecPhlDCStruct.ml  ecPhlDCStruct.mli  (+73 more)
src/polls/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/src/: ecCoreLib.ml  ecLoader.ml  ecMaps.ml  ecParser.mly  ecPath.ml  ecPrinting.mli  ecSubst.ml  ecUtils.ml  ecWhy3.mli
src/system/: EUnix.ml  EUnix.mli  XDG.ml  XDG.mli  eunix.c
src/tests/: require.ec  section.ec
src/webui/: settings.py  urls.py  wsgi.py
src/why3/: ecWhy3.ml  ecWhy3.mli  ecWhy3Conv.ml  ecWhy3Conv.mli
theories/: ABitstring.ec  AWord.ec  AdvAbsVal.ec  AlgTactic.ec  Array.ec  BigOp.ec  Bilinear.ec  Birthday.ec  Bitstring.ec  Bool.ec  CDH.ec  CyclicGroup.ec  Cyclic_group_prime.ec  Dice_sampling.ec  DiffieHellman.ec  Distr.ec  EF_CMA.ec  EF_CMA_ROM.ec  FMap.ec  FSet.ec  Fun.ec  IRing.ec  ISet.ec  Int.ec  List.ec  Logic.ec  MAC.ec  Map.ec  Map_why.ec  Matrix.ec  Means.ec  Monoid.ec  Monoide.ec  Multiset.ec  NewFMap.ec  NewFSet.ec  NewList.ec  NewMap.ec  NewSet.ec  Number.ec  (+44 more)
theories/algebra/:  *Minibuf-2*  #FFexistence.ec#  AlgTactic.ec  Bigalg.ec  Bigalg.eca  Bigop.eca  Binomial.ec  Characteristic.ec  CommAlgebra.ec  Counting.ec  DynMatrix.eca  FFexistence.ec  FFunicity.ec  FiniteField.ec  FiniteRing.ec  Group.ec  GroupAction.ec  Homomorphism.ec  IRing.ec  Ideal.ec  IntDiv.ec  Mat.eca  Matrix.eca  MaxBigop.eca  Monoid.ec  Monoid.eca  Morphism.ec  NR_PRF.ec  Number.ec  Number.eca  Perms.ec  PermsGroup.eca  Poly.ec  Poly.eca  PolyDiv.ec  PolyFF.ec  PolyFiniteField.ec  PolyReduce.ec  Ring.ec  RingModule.ec  (+12 more)
theories/analysis/: RealExp.ec  RealFLub.ec  RealFun.ec  RealLub.ec  RealSeq.ec  RealSeries.ec
theories/aprhl/: aprhl.ec
theories/core/: AllCore.ec  Bool.ec  Core.ec  CoreInt.ec  CoreMap.ec  CoreReal.ec  ExtEq.ec  FMap.ec  Fun.ec  IntCore.ec  Pred.ec  RealCore.ec  Rel.ec
theories/crypto/: #Birthday.eca#  #PROM.ec#  .#Birthday.eca  AdvAbsVal.ec  Birthday.ec  Birthday.eca  Commitment.ec  DLog.ec  Dice_sampling.ec  Dice_sampling.eca  DiffieHellman.ec  DigitalSignatures.eca  DigitalSignaturesROM.eca  GlobalHybrid.ec  KeyEncapsulationMechanisms.eca  KeyEncapsulationMechanismsROM.eca  KeyedHashFunctions.eca  LorR.ec  LorR.eca  MAC.ec  OW.ec  OracleBounds.ec  PKE.ec  PKS.ec  PRF.eca  PRG.eca  PROM.ec  PROM.eca  PRP.eca  PublicKeyEncryption.eca  PublicKeyEncryptionROM.eca  ROM.ec  ROM.eca  RndExcept.eca  RndO.ec  SecureChannels.ec  SigmaProtocol.ec  SplitRO.ec  SymmetricEncryption.ec  TweakableHashFunctions.eca
theories/datatypes/: ABitstring.ec  AWord.ec  Array.ec  BitEncoding.ec  BitWord.eca  Datatypes.ec  FMap.ec  FSet.ec  FloorCeil.ec  IArray.ec  IWord.ec  Int.ec  IntExtra.ec  IntMin.ec  List.ec  MSet.ec  Nneg.ec  Option.ec  Pair.ec  QFABV.ec  RMap.ec  Real.ec  RealExtra.ec  SmtMap.ec  Tuple.eca  Word.eca  Xint.ec  Xreal.ec  datatypes.ec
theories/distributions/: #Dexcepted.ec#  BoundedPreSample.ec  DBool.ec  DCond.ec  DFSet.ec  DInterval.ec  DJoin.ec  DList.ec  DMap.ec  DProd.ec  Dexcepted.ec  Dfilter.ec  Distr.ec  Dmulti.ec  Drestrict.ec  Geometric.ec  Mu_mem.ec  NewDistr.ec  OldDistr.ec  RDiv.ec  RDivOracle.ec  SDist.ec  SmoothRDiv.ec
theories/encryption/: DDH_hybrid.ec  Hybrid.ec  Indist.ec  Means.ec  PKE.ec  PKE_hybrid.ec  SampleBool.ec
theories/looping/: #FoldProc.eca#  #ForProc.eca#  FoldProc.eca  ForProc.eca  IterProc.eca  LoopTransform.ec
theories/modules/: EventPartitioning.ec  ModuleStructure.ec  (+5 more)
why3-0.71/: INSTALL  META  META.in  Makefile.in  README  Version  configure.in
(+2236 files in other folders)
