(dirs 3rdparty src etc theories examples assets scripts doc)

(install
  (section (site (easycrypt commands)))
  (files (scripts/testing/runtest as runtest)))

(install
  (section (site (easycrypt doc)))
  (files
    (assets/styles/styles.css as styles.css)
    (doc/llm/CLAUDE.md as llm-guide.md)))

(install
  (section (bin))
  (files (scripts/testing/bin-ec-runtest as ec-runtest)))
