(env
 (dev     (flags :standard -rectypes -w @1..3@5..28@31..39@43@46..47@49..57@61..62-40-9-23-32-67-69 -warn-error -a+31))
 (ci      (flags :standard -rectypes -w @1..3@5..28@31..39@43@46..47@49..57@61..62-40-9-23-32-67-69 -warn-error +a))
 (release (flags :standard -rectypes)
          (ocamlopt_flags -O3 -unbox-closures)))


(include_subdirs unqualified)

(generate_sites_module
 (module ecDuneSites)
 (sites easycrypt))

(library 
 (name ecLib)
 (public_name easycrypt.ecLib)
 (foreign_stubs (language c) (names eunix))
 (modules :standard \ ec)
 (libraries batteries camlp-streams dune-build-info dune-site inifiles markdown markdown.html pcre2 tyxml why3 yojson zarith)
)

(executable
 (public_name easycrypt)
 (name ec)
 (modules ec)
 (promote (until-clean))
 (libraries batteries camlp-streams dune-build-info dune-site inifiles pcre2 why3 yojson zarith ecLib))

(ocamllex ecLexer)

(menhir
 (modules ecParser)
 (explain true)
 (flags --table --unused-token COMMENT))
